# speech-recorder

./: .gitignore  .npmignore  LICENSE  README.md  binding.gyp  build.js  build.sh  feature-extractor.ts  index.ts  package.json  setup.js  setup.sh  tsconfig.json  vad.ts
examples/: analyze-files.js  audio.js  devices.js  file.js  live.js  padding.js  record.js  silence.js  speech.js  triggers.js
include/: speech_recorder.h
lib/: CMakeLists.txt
lib/include/: aligned.h  chunk_processor.h  devices.h  microphone.h  webrtcvad.h
lib/src/: chunk_processor.cpp  devices.cpp  microphone.cpp  webrtcvad.cpp
lib/test/: main.cpp
portaudio/bin_armhf/: libportaudio.so.2
portaudio/lib/linux/: libportaudio.so.2
portaudio/lib/mac/: libportaudio.dylib
portaudio/msvc/: build.bat  portaudio.def  portaudio.vcxproj  readme.txt
src/: AudioIn.cc  AudioIn.h  ChunkQueue.h  GetDevices.cc  GetDevices.h  Memory.h  Params.h  Persist.h  common.cc  common.h  index.js  portaudio.cc  speech_recorder.cpp
test/: test.js
